--- a/style.css
+++ b/style.css
@@ -87,12 +87,12 @@ body {
 }
 
 #left p {
-    /* font-size: 20px; */
     font-size: 1.1vw;
     line-height: 1.5vw;
     width: 70%;
     color: #444;
     font-weight: 500;
+    text-align: justify;
 }
 
 #right {
@@ -125,17 +125,18 @@ body {
 }
 
 #right img {
-    height: 100%;
-    width: 100%;
+    height: 85%;
+    width: 85%;
     object-fit: cover;
+    object-position: center;
 }
 
 #cart {
     position: absolute;
-    right: -15%;
+    right: -2%;
     top: 40%;
-    height: 150px;
-    width: 150px;
+    height: 120px;
+    width: 120px;
     color: white;
     background-color: rgb(26, 26, 26);
     border-radius: 50%;
@@ -146,7 +147,7 @@ body {
 }
 
 #cart h5 {
-    font-size: 25px;
+    font-size: 18px;
     font-weight: 500;
 }
 
@@ -175,7 +176,7 @@ body {
     }
 
     #left {
-        height: fit-content%;
+        height: fit-content;
         width: 100%;
         padding-bottom: 50px;
         display: flex;
